--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="estilowebcss.css">
 
 <script>
-    // Agrega función para cargar imágenes con onload y aplicar efecto fade in
+    // Agrega función para cargar imágenes.
     function fadeIn(img) {
         img.style.opacity = '1';
     }
